--- a/PhotoContestAPI/CryptoManagerAPI.csproj
+++ b/PhotoContestAPI/CryptoManagerAPI.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.17.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Classes\" />
+  </ItemGroup>
+
 
 </Project>
