--- a/PhotoContestAPI/Properties/launchSettings.json
+++ b/PhotoContestAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/UploadPhotos",
+      "launchUrl": "api/ExistingInvestment",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
